Bug 353382 - Background mode in konsole5 does not work
Summary: Background mode in konsole5 does not work
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: 15.12.1
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
: 346372 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-09-30 20:36 UTC by ponury.pastuch
Modified: 2018-11-01 20:10 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description ponury.pastuch 2015-09-30 20:36:08 UTC
When konsole is run with --background-mode flag, the shortcut for bringing the window (Ctrl+Shift+F12) does not work. Changing the "Toggle Background Window" shortcut to something else does not fix this.

Tested this bug on openSUSE (konsole 15.04) and Fedora (konsole 15.08). 

Reproducible: Always

Steps to Reproduce:
1.Run konsole with --background mode
2.Press Ctrl+Shift+F12
3.Nothing shows up
Comment 1 Max Ionov 2016-04-25 20:04:37 UTC
I have the same problem using Konsole 15.08 on Ubuntu 15.10 (Qt: 5.4.2, KDE Frameworks: 5.15.0)
Comment 2 Kurt Hindenburg 2018-02-14 19:46:55 UTC
OK I missed this report - I'll see what I can find out
Comment 3 Kurt Hindenburg 2018-02-14 20:43:32 UTC
I disabled this in 2014 - if I can't get it work before next release, I'll remove the option.
Comment 4 Kurt Hindenburg 2018-02-14 21:22:52 UTC
Git commit f4fbec0c020fae03c9464698102247d6c2fad2fe by Kurt Hindenburg.
Committed on 14/02/2018 at 21:20.
Pushed by hindenburg into branch 'master'.

Fix --background-mode so the shortcut works

I disabled this in 2014 since it did not work; it works now and
changing the shortcut works as well.

M  +1    -1    CMakeLists.txt
M  +6    -7    src/Application.cpp
M  +1    -0    src/CMakeLists.txt

https://commits.kde.org/konsole/f4fbec0c020fae03c9464698102247d6c2fad2fe
Comment 5 Sebastian 2018-11-01 20:10:12 UTC
*** Bug 346372 has been marked as a duplicate of this bug. ***