Fix --background-mode so the shortcut works

I disabled this in 2014 since it did not work; it works now and
changing the shortcut works as well.

BUG: 353382